# Colbertv2-Wiki17-Abstracts-Image

./: .gitignore  Dockerfile  LICENSE  README.md  build_index  fix_collection_format.py  pyproject.toml
app/: __init__.py  __main__.py  config.py  main.py  state.py
dspy_adapter/: __init__.py  colbert.py
scripts/: build_index.py  download_wiki17_abstracts.py  push_to_hf.py
